<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/run4funicon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/statistical_analyze_button"
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:text="@string/statistical_analyze_text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:text="@string/settings_text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/acitivity_history_button"
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:text="@string/activity_history_text"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/start_activity_button"
                    android:layout_width="match_parent"
                    android:layout_height="80sp"
                    android:text="@string/start_activity_text"
                    android:textSize="25sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="541dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>