<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.WorkOutDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:background="#33000000"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:id="@+id/workout_data_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/workout_data_text"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_key_edit_data_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/date_value_edit_data_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/distance_key_edit_finish_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/distance_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/distatnce_value_edit_data_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/time_key_edit_data_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/time_value_edit_data_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/calories_key_edit_data_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calories_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/calories_value_edit_data_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="calories" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/avg_pace_key_edit_data_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/avg_pace_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/avg_pace_value_edit_data_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0 KM/h" />

            </LinearLayout>

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapViewWorkOut"
                android:layout_width="match_parent"
                android:layout_height="368dp"
                android:layout_margin="2sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>