<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WorkOutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timer_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/boarder"
            android:text="00:00:00"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/velocity_key_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/velocity_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/velocity_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 KM/h"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/distance_key_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/distance_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/distance_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 KM"
                    android:textSize="20sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cal_key_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cal_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pace_key_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pace_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pace_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 KM/h"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/boarder"
            android:layout_height="360dp"
            android:orientation="vertical">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView2"
                android:layout_width="match_parent"
                android:layout_height="216dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/pause_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickPause"
                android:text="@string/pause_text"
                android:textSize="25sp" />

            <Button
                android:id="@+id/resume_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickResume"
                android:text="@string/resume_text"
                android:textSize="25sp" />

            <Button
                android:id="@+id/finish_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickFinish"
                android:text="@string/finish_text"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>